dark mode styles for links, qr icon color fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -214,7 +214,6 @@ $breakpoint-mobile: 500px;
 
   canvas {
     margin: 2% auto;
-    border: 2px solid black;
   }
 
   .card-top-row {
